Roles completed, added api-gateway and eureka-server